2006-02-23  Chris Toshok  <toshok@ximian.com>

	* CheckBox.cs, ContentControlBuilderInternal.cs, Content.cs,
	ContentPlaceHolderBuilder.cs, ContentPlaceHolder.cs,
	DataControlFieldHeaderCell.cs, DataGridColumn.cs,
	HierarchicalDataBoundControl.cs, HyperLinkField.cs,
	ImageButton.cs, ImageField.cs, Literal.cs,
	ObjectDataSourceView.cs, TextBox.cs: more corcompare work.

	* BaseCompareValidator.cs, BaseValidator.cs, Button.cs,
	DataControlField.cs, DetailsView.cs, FormView.cs, GridView.cs,
	HotSpot.cs, LinkButton.cs, Login.cs, SiteMapDataSource.cs,
	SqlDataSourceCommandType.cs, TableSectionStyle.cs,
	TemplateField.cs, TreeNodeCollection.cs, TreeNode.cs, TreeView.cs,
	ValidationSummary.cs, WizardStepBase.cs: fix tons of corcompare
	errors.  most were caused by a property/method being virtual when
	it shouldn't be, or vice versa.

2006-02-22  Chris Toshok  <toshok@ximian.com>

	* ObjectDataSource.cs: corcompare work.

2006-02-22  Chris Toshok  <toshok@ximian.com>

	* ParameterCollection.cs: add an EditorAttribute to the class.

	* Parameter.cs: cleanup, fix the Value property, and implement the
	Size property.

	* SqlDataSourceView.cs: clean things up a bit, and add handling
	for parameters.

2006-02-22  Chris Toshok  <toshok@ximian.com>

	* SqlDataSourceFilteringEventArgs.cs: formatting.

	* SqlDataSourceSelectingEventArgs.cs: remove ExecutingSelectCount,
	both the property and ctor arg.

	* AccessDataSourceView.cs (ExecuteSelect): use SelectingEventArgs,
	not CommandEventArgs.  Also, cast the return value of
	oleCommand.ExecuteReader.

	* AccessDataSource.cs (.ctor): fix the ctors and remove FIXME
	comments.
	(GetDbProviderFactory): implement naively, and leave a MonoTODO.
	(GetPhysicalDataFilePath): implement, again naively.  this is
	where the NRE is generated when we access ConnectionString in a
	testcase on .net.
	(ConnectionString): dynamically generate this based on our
	DataFile attribute.
	(DataFile): clear the ConnectionString in the setter so we'll